--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,11 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>payload-generator</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
   <name>payload-generator</name>
+
+  <scm>
+    <connection>scm:svn:http://code.icecube.wisc.edu/daq/meta-projects/payload-generator/trunk</connection>
+  </scm>
 
   <dependencies>
     <dependency>
