Issue 2346: Move some file readers/writers from the payload project to daq-io

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
       <groupId>edu.wisc.icecube</groupId>
       <artifactId>payload</artifactId>
     </dependency>
+    <dependency>
+      <groupId>edu.wisc.icecube</groupId>
+      <artifactId>daq-io</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
